test/parser/connect/act-007.stderr
At: "act-007.hac":9:
parse error: syntax error
parser stacks:
state	value
#STATE#	(null) 
#STATE#	list<(root_item)>: (process-prototype) ... [5:1--7:9]
#STATE#	(type-ref) [9:1..3]
#STATE#	identifier: f [9:5]
#STATE#	(null) 
#STATE#	list<(range)>: (range) ... [9:7]
#STATE#	( [9:9]
in state #STATE#, possible rules are:
	instance_id_item : ID optional_template_arguments_in_angles sparse_range_list .  (#RULE#)
	sparse_range_list : sparse_range_list . bracketed_sparse_range  (#RULE#)
acceptable tokens are: 
	',' (reduce)
	';' (reduce)
	'[' (shift)
